// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-tooltip should be rendered without props 1`] = `
<Dropdown
  button={
    <span>
      tooltip
    </span>
  }
  className=""
  disabled={false}
  hoverMode={true}
  margin={5}
  noArrow={false}
  noPropagateClickEvent={false}
  noWrapperStyle={true}
  onClose={[Function]}
  onOpen={[Function]}
  opened={false}
  position="bc"
  wrapperClassName=""
>
  <div
    className="
            tooltip
            position-bc
            type-black
            
          "
    style={
      Object {
        "width": 190,
      }
    }
  >
    <div
      className="helperWrapper"
    >
      help
    </div>
  </div>
</Dropdown>
`;

exports[`fyndiq-component-tooltip should have a component for the prop text 1`] = `
<Dropdown
  button={
    <span>
      tooltip
    </span>
  }
  className=""
  disabled={false}
  hoverMode={true}
  margin={5}
  noArrow={false}
  noPropagateClickEvent={false}
  noWrapperStyle={true}
  onClose={[Function]}
  onOpen={[Function]}
  opened={false}
  position="bc"
  wrapperClassName=""
>
  <div
    className="
            tooltip
            position-bc
            
          "
    style={
      Object {
        "width": 190,
      }
    }
  >
    <div
      className="helperWrapper"
    >
      <div>
        hello
      </div>
    </div>
  </div>
</Dropdown>
`;

exports[`fyndiq-component-tooltip should have the right position 1`] = `
<Dropdown
  button={
    <span>
      tooltip
    </span>
  }
  className=""
  disabled={false}
  hoverMode={true}
  margin={5}
  noArrow={false}
  noPropagateClickEvent={false}
  noWrapperStyle={true}
  onClose={[Function]}
  onOpen={[Function]}
  opened={false}
  position="tr"
  wrapperClassName=""
>
  <div
    className="
            tooltip
            position-tr
            
          "
    style={
      Object {
        "width": 190,
      }
    }
  >
    <div
      className="helperWrapper"
    >
      help
    </div>
  </div>
</Dropdown>
`;
